# footprint

./: .gitignore  README.md
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  parser.rs  types.rs
site/: package-lock.json  package.json  wrangler.toml
site/src/components/: CodeBlock.astro  Footer.astro  Nav.astro
site/src/layouts/: BaseLayout.astro
site/src/pages/: index.astro
